@@ -1,4 +1,5 @@
 pyroute2==0.5.2
 pytest==3.10.1
+pytest-helpers-namespace==2019.1.8
 pytest-xdist==1.26.1
 scapy==2.4.3
